# yasbd-lib

./: .gitignore  .pre-commit-config.yaml  API_REFERENCES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bench_cli.py  pr.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: add-language.yml  bug_report.md
.github/workflows/: build-and-test.yml  code-review.yml  lint.yml  publish.yml
benchmarks/: EN_GOLDEN_DATA.py  README.md  bench_books.py  bench_plot.py  bench_utils.py  run_golden.py
scripts/: gen_api_docs.sh
src/yasbd/: __init__.py  boundary_detector.py  cleaner.py  cli.py  exceptions.py  normalize.py  segmenter.py
src/yasbd/rules/: __init__.py  _template.py  _template_rules.py  af.py  am.py  ar.py  base.py  da.py  de.py  el.py  en.py  en_rule.py  en_rules.py  es.py  es_rules.py  fa.py  fr.py  fr_rules.py  hi.py  ht.py  ht_rules.py  id.py  it.py  ja.py  ja_rules.py  ko.py  ml.py  my.py  nl.py  pt.py  ru.py  sk.py  sv.py  th.py  uk.py  vi.py  zh.py
src/yasbd/utils/: cleaner.py  cleaner_stub.py  input_validator.py  lang_code_normalizer.py  language_classifier.py  language_normalizer.py  logger.py  paragraph_stream.py  paragraph_streamer.py  pysbd_adapter.py  spacy_component.py
tests/: __init__.py  test_boundary_detector.py  test_cleaner.py  test_lang_packs.py  test_normalize.py  test_plugins.py  test_pysbd_adapter.py  test_regex_caching.py  test_rules.py  test_segmenter.py  test_spacy_component.py
tests/test_data/: afrikaans.py  amharic.py  arabic.py  burmese.py  chinese.py  danish.py  dutch.py  en.py  english.py  french.py  german.py  greek.py  haitian_creole.py  hindi.py  indonesian.py  italian.py  japanese.py  korean.py  malayalam.py  persian.py  portuguese.py  russian.py  slovak.py  spanish.py  swedish.py  thai.py  ukrainian.py  vietnamese.py
