[project]
name = "yasbd-lib"
version = "0.8.0"
description = "A high-accuracy, from-scratch Sentence Boundary Detector (SBD) for production pipelines. Features a drop-in adapter for pysbd to fix edges cases without heavy refactoring."
authors = [
  { name = "speedyk_005", email = "speedy40115719@gmail.com" }
]

license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]

keywords = [
  "sentence-segmentation", "sentence-boundary-detection", "sbd", "sentence-splitting",
  "sentence-splitter", "multilingual", "text processing", "text-splitting",
  "natural language processing", "nlp"
]

dependencies = [
  "loguru>=0.7.3,<1.0",
  "regex>=2024.11.6",
  "ftfy>=6.2.0,<7.0",
  "retrie>=0.3.0,<1.0",
  "py3langid>=0.2.2,<1.0",
  "radicli>=0.0.25,<1.0",
  "beartype>=0.22.6,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.2.1",
  "pre-commit>=4.4.0",
  "pydoc-markdown>=4.8.0,<5.0",
  "ruff>=0.14.14",
]

bench = [
  "pysbd",
  "sentencex",
  "sentsplit",  # depends on deprecated pkg_resources — needs setuptools<81
  "nupunkt",
  "blingfire",
  "sentence-splitter",
  "setuptools<81",
  "matplotlib",
  "rich",
  "radicli",
]

[project.urls]
Homepage = "https://github.com/speedyk-005/yasbd-lib"
Repository = "https://github.com/speedyk-005/yasbd-lib"
Documentation = "https://speedyk-005.github.io/yasbd/"
Issues = "https://github.com/speedyk-005/yasbd-lib/issues"
Changelog = "https://github.com/speedyk-005/yasbd-lib/blob/main/CHANGELOG.md"

[project.scripts]
yasbd = "yasbd.cli:main"

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "yasbd",
    "yasbd.utils",
    "yasbd.rules",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--doctest-modules --cov=yasbd --cov-report=term-missing:skip-covered --durations=10 --ignore=src/yasbd/utils/spacy_component.py"
testpaths = ["tests", "src/yasbd/utils", "src/yasbd/cli.py"]
python_files = "test_*.py"

[tool.coverage.run]
omit = ["*/_template.py", "*/cleaner_stub.py", "*/cli.py"]

[tool.ruff]
target-version = "py311"
line-length = 95

[tool.ruff.lint]
# E, W (Flake8), F (Pyflakes), I (Isort), B (Bugbear)
select = ["E", "F", "I", "W", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "I001"]
"src/yasbd/utils/cleaner.py" = ["E501"]
"tests/test_data/*" = ["E501"]
"benchmarks/*" = ["E501"]

[tool.ruff.format]
exclude = [".git", ".venv", "build", "dist", "tests/test_data/*", "*/EN_GOLDEN_DATA.py"]

[tool.uv]
link-mode = "copy"
